--- a/index.html
+++ b/index.html
@@ -2,76 +2,132 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HY Yazılım - Hayalini Kodluyoruz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HYYazılım</title>
   <style>
+    /* Genel */
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0a0a0a;
-      color: #ffffff;
-      text-align: center;
-      padding: 30px;
+      background: linear-gradient(135deg, #0d324d, #7f5a83);
+      color: #e0f7f7;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
 
+    /* Başlık */
     h1 {
-      color: #00ffc8;
-      font-size: 2.5em;
+      font-size: 3rem;
+      margin-top: 60px;
+      text-shadow: 0 0 8px #00ffc8;
+      animation: glow 2s ease-in-out infinite alternate;
     }
 
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 8px #00ffc8, 0 0 20px #00ffc8;
+      }
+      to {
+        text-shadow: 0 0 20px #00ffc8, 0 0 40px #00ffc8;
+      }
+    }
+
+    /* Açıklama */
     p {
-      font-size: 1.2em;
-      margin-bottom: 20px;
+      font-size: 1.25rem;
+      max-width: 600px;
+      text-align: center;
+      margin: 20px 0 40px 0;
+      line-height: 1.5;
     }
 
+    /* Form */
     form {
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 12px;
-      display: inline-block;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 30px rgba(0, 255, 200, 0.2);
+      width: 100%;
+      max-width: 400px;
+      backdrop-filter: blur(10px);
     }
 
-    input, textarea, button {
-      width: 300px;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
+    input, textarea {
+      width: 100%;
+      padding: 15px;
+      margin: 15px 0;
+      border-radius: 10px;
       border: none;
-      font-size: 1em;
+      font-size: 1rem;
+      background: rgba(255, 255, 255, 0.15);
+      color: #e0f7f7;
+      resize: none;
+      transition: background 0.3s ease;
     }
 
+    input::placeholder, textarea::placeholder {
+      color: #c0ffff;
+    }
+
+    input:focus, textarea:focus {
+      background: rgba(255, 255, 255, 0.3);
+      outline: none;
+    }
+
+    /* Buton */
     button {
-      background-color: #00ffc8;
+      width: 100%;
+      padding: 15px;
+      border-radius: 10px;
+      border: none;
+      background: #00ffc8;
       color: #000;
+      font-weight: 700;
+      font-size: 1.2rem;
       cursor: pointer;
-      font-weight: bold;
+      transition: background 0.3s ease;
+      box-shadow: 0 4px 15px #00ffc8;
     }
 
+    button:hover {
+      background: #00bfa5;
+      box-shadow: 0 6px 20px #00bfa5;
+    }
+
+    /* İletişim bölümü */
     .contact-info {
-      margin-top: 40px;
+      margin: 40px 0;
+      text-align: center;
+      font-size: 1rem;
+      color: #a0eee6;
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2.2rem;
+      }
+      form {
+        padding: 20px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>HY Yazılım</h1>
-  <p>Hayalini bilgisayarına kodluyoruz!</p>
-  <p>Görev çubuğunda yürüyen adam mı?<br>
-  Tuşa basınca gizli görev mi açılsın?<br>
-  Konuşan masaüstü mü?<br>
-  Anlat, biz yapalım.</p>
+  <h1>HYYazılım</h1>
+  <p>Hayalini bilgisayarına kodluyoruz!<br>Görev çubuğunda yürüyen adam mı? Tuşa basınca gizli görev mi açılsın? Konuşan masaüstü mü? Anlat, biz yapalım.</p>
 
   <form action="https://formspree.io/f/xgvybkwj" method="POST">
-    <h3>İsteğini Yaz</h3>
-    <input type="text" name="ad" placeholder="Adınız" required /><br />
-    <textarea name="istek" placeholder="Hayalinizi anlatın.
-Ayrıca sizinle iletişime geçebilmemiz için bir telefon numarası veya e-posta adresi yazmayı unutmayın.
-Hayalinizi birlikte gerçekleştirelim!" rows="5" required></textarea><br />
+    <input type="text" name="ad" placeholder="Adınız" required />
+    <textarea name="istek" placeholder="Hayalinizi anlatın. Ayrıca sizinle iletişime geçebilmemiz için bir telefon numarası veya e-posta adresi yazın." rows="5" required></textarea>
     <button type="submit">Gönder</button>
   </form>
 
   <div class="contact-info">
-    <h3>İletişim</h3>
-    <p>📱 WhatsApp: 0555 163 18 50</p>
-    <p>📧 E-posta: hasanyusufyildiz35@gmail.com</p>
+    <p>📱 WhatsApp: 0555 163 18 50<br>📧 E-posta: hasanyusufyildiz35@gmail.com</p>
   </div>
 </body>
 </html>
