--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
   <h1>HYYazılım</h1>
-  <p>Hayalini bilgisayarına kodluyoruz!<br>Görev çubuğunda yürüyen adam mı? Tuşa basınca gizli görev mi açılsın? Konuşan masaüstü mü? Anlat, biz yapalım.</p>
+  <p>Hayalini bilgisayarına veya telefonuna kodluyoruz!<br>Görev çubuğunda yürüyen adam mı? Tuşa basınca gizli görev mi açılsın? Konuşan masaüstü mü? Anlat, biz yapalım.</p>
 
   <form action="https://formspree.io/f/xgvybkwj" method="POST">
     <input type="text" name="ad" placeholder="Adınız" required />
