--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HYYazılım</title>
+
+  <!-- Favicon: favicon.ico dosyasını aynı klasöre koy -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
   <style>
     /* Genel */
     body {
@@ -18,10 +22,22 @@
       min-height: 100vh;
     }
 
+    /* Logo */
+    .logo {
+      margin-top: 40px;
+      filter: drop-shadow(0 0 15px #00ffc8);
+      animation: float 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes float {
+      from { transform: translateY(0); }
+      to { transform: translateY(-10px); }
+    }
+
     /* Başlık */
     h1 {
       font-size: 3rem;
-      margin-top: 60px;
+      margin-top: 20px;
       text-shadow: 0 0 8px #00ffc8;
       animation: glow 2s ease-in-out infinite alternate;
     }
@@ -40,7 +56,7 @@
       font-size: 1.25rem;
       max-width: 600px;
       text-align: center;
-      margin: 20px 0 40px 0;
+      margin: 20px 0 30px 0;
       line-height: 1.5;
     }
 
@@ -53,6 +69,7 @@
       width: 100%;
       max-width: 400px;
       backdrop-filter: blur(10px);
+      margin-bottom: 30px;
     }
 
     input, textarea {
@@ -77,7 +94,6 @@
       outline: none;
     }
 
-    /* Buton */
     button {
       width: 100%;
       padding: 15px;
@@ -97,15 +113,37 @@
       box-shadow: 0 6px 20px #00bfa5;
     }
 
-    /* İletişim bölümü */
     .contact-info {
-      margin: 40px 0;
+      margin: 30px 0;
       text-align: center;
       font-size: 1rem;
       color: #a0eee6;
     }
 
-    /* Responsive */
+    h2 {
+      margin-top: 40px;
+      font-size: 1.8rem;
+      text-shadow: 0 0 5px #00ffc8;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      text-align: center;
+    }
+
+    li a {
+      display: block;
+      color: #00ffc8;
+      font-size: 1.1rem;
+      margin: 10px 0;
+      text-decoration: none;
+    }
+
+    li a:hover {
+      text-decoration: underline;
+    }
+
     @media (max-width: 480px) {
       h1 {
         font-size: 2.2rem;
@@ -117,6 +155,10 @@
   </style>
 </head>
 <body>
+
+  <!-- Logo -->
+  <img src="logo.png" alt="HYYazılım Logo" class="logo" width="120" />
+
   <h1>HYYazılım</h1>
   <p>Hayalini bilgisayarına veya telefonuna kodluyoruz!<br>Görev çubuğunda yürüyen adam mı? Tuşa basınca gizli görev mi açılsın? Konuşan masaüstü mü? Anlat, biz yapalım.</p>
 
@@ -126,8 +168,16 @@
     <button type="submit">Gönder</button>
   </form>
 
+  <h2>📂 Hazır Projeler</h2>
+  <ul>
+    <li><a href="HYController.zip">💾 HYController – Sistem yönetim aracı (İndir)</a></li>
+    <li><a href="ChatApp.zip">🗣️ Sesli + Yazılı Chat Odası (İndir)</a></li>
+    <li><a href="TrollButon.exe">🎮 Troll Buton – Tıkladıkça ses çıkaran buton (İndir)</a></li>
+  </ul>
+
   <div class="contact-info">
     <p>📱 WhatsApp: 0555 163 18 50<br>📧 E-posta: hasanyusufyildiz35@gmail.com</p>
   </div>
+
 </body>
 </html>
