--- a/index.html
+++ b/index.html
@@ -26,20 +26,6 @@
       from { transform: translateY(0); }
       to { transform: translateY(-10px); }
     }
-    h1 {
-      font-size: 3rem;
-      margin-top: 20px;
-      text-shadow: 0 0 8px #00ffc8;
-      animation: glow 2s ease-in-out infinite alternate;
-    }
-    @keyframes glow {
-      from {
-        text-shadow: 0 0 8px #00ffc8, 0 0 20px #00ffc8;
-      }
-      to {
-        text-shadow: 0 0 20px #00ffc8, 0 0 40px #00ffc8;
-      }
-    }
     p {
       font-size: 1.25rem;
       max-width: 600px;
@@ -143,9 +129,6 @@
       margin-bottom: 20px;
     }
     @media (max-width: 480px) {
-      h1 {
-        font-size: 2.2rem;
-      }
       form {
         padding: 20px;
       }
@@ -158,17 +141,20 @@
 </head>
 <body>
 
+  <!-- LOGO (Yazı yok) -->
   <img src="logo.png" alt="HYYazılım Logo" class="logo" width="120" />
 
-  <h1>HYYazılım</h1>
+  <!-- Tanıtım -->
   <p>Hayalini bilgisayarına veya telefonuna kodluyoruz!<br>Görev çubuğunda yürüyen adam mı? Tuşa basınca gizli görev mi açılsın? Konuşan masaüstü mü? Anlat, biz yapalım.</p>
 
+  <!-- Form -->
   <form action="https://formspree.io/f/xgvybkwj" method="POST">
     <input type="text" name="ad" placeholder="Adınız" required />
     <textarea name="istek" placeholder="Hayalinizi anlatın. Ayrıca sizinle iletişime geçebilmemiz için bir telefon numarası veya e-posta adresi yazın." rows="5" required></textarea>
     <button type="submit">Gönder</button>
   </form>
 
+  <!-- Hakkımda -->
   <section id="hakkimda">
     <h2>👤 Hakkımda</h2>
     <p>Merhaba! Ben Hasan Yusuf YILDIZ, genç ve tutkulu bir yazılım geliştiricisiyim.<br>
@@ -179,6 +165,7 @@
     Bana ulaşmaktan çekinmeyin, birlikte harika şeyler yapabiliriz!</p>
   </section>
 
+  <!-- Projeler -->
   <h2>📂 Hazır Projeler</h2>
   <ul class="project-list">
     <li><a href="HYController.zip" download>💾 HYController – Sistem yönetim aracı (İndir)</a></li>
@@ -186,6 +173,7 @@
     <li><a href="TrollButon.exe" download>🎮 Troll Buton – Tıkladıkça ses çıkaran buton (İndir)</a></li>
   </ul>
 
+  <!-- İletişim -->
   <div class="contact-info">
     <p>📱 WhatsApp: 0555 163 18 50<br>📧 E-posta: hasanyusufyildiz35@gmail.com</p>
   </div>
