--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     margin: 15px auto 25px auto;
     filter: drop-shadow(0 0 18px #00ffc8);
     animation: float 2.5s ease-in-out infinite alternate;
-    width: 130px; /* biraz büyüttüm */
+    width: 130px;
   }
   @keyframes float {
     from { transform: translateY(0); }
@@ -57,7 +57,7 @@
     border-radius: 15px;
     box-shadow: 0 0 40px #00ffc8;
     width: 90%;
-    max-width: 380px; /* biraz daralttım */
+    max-width: 380px;
     text-align: center;
   }
   .form-container h2 {
@@ -78,7 +78,7 @@
     resize: none;
     transition: background 0.3s ease;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center; /* placeholder ve yazı ortada */
+    text-align: center;
   }
   input::placeholder, textarea::placeholder {
     color: #c0ffff;
@@ -208,9 +208,8 @@
     projeler: `
       <h2>📂 Hazır Projeler</h2>
       <ul>
-        <li><a href="HYController.zip" download style="color:#00ffc8;">💾 HYController – Sistem yönetim aracı</a></li>
-        <li><a href="ChatApp.zip" download style="color:#00ffc8;">🗣️ Sesli + Yazılı Chat Odası</a></li>
-        <li><a href="TrollButon.exe" download style="color:#00ffc8;">🎮 Troll Buton – Tıkladıkça ses çıkaran buton</a></li>
+        <li><a href="projeler/app.exe" download style="color:#00ffc8;">🗣️ Sesli + Yazılı Chat Uygulaması</a></li>
+        <li><a href="projeler/DayzninEvi.exe" download style="color:#00ffc8;">🎃 Dayz’ın Evi – Korku Oyunu</a></li>
       </ul>
     `,
     iletisim: `
