--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
     projeler: `
       <h2>📂 Hazır Projeler</h2>
       <ul>
-        <li><a href="projeler/app.exe" download style="color:#00ffc8;">🗣️ Sesli + Yazılı Chat Uygulaması</a></li>
-        <li><a href="projeler/DayzninEvi.exe" download style="color:#00ffc8;">🎃 Dayz’ın Evi – Korku Oyunu</a></li>
+        <li><a href="app.exe" download style="color:#00ffc8;">🗣️ Sesli + Yazılı Chat Uygulaması</a></li>
+        <li><a href="DayzninEvi.exe" download style="color:#00ffc8;">🎃 Dayz’ın Evi – Korku Oyunu</a></li>
       </ul>
     `,
     iletisim: `
