--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
       <p>HYYazılım çatısı altında, hem masaüstü hem mobil platformlar için özgün yazılımlar tasarlıyor ve geliştiriyorum.</p>
     `,
     projeler: `
-      <h2>📂 Hazır Projeler</h2>
-      <ul>
-        <li><a href="app.exe" download style="color:#00ffc8;">🗣️ Sesli + Yazılı Chat Uygulaması</a></li>
-        <li><a href="DayzninEvi.exe" download style="color:#00ffc8;">🎃 Dayz’ın Evi – Korku Oyunu</a></li>
-      </ul>
-    `,
+  <h2>📂 Hazır Projeler</h2>
+  <ul>
+    <li><a href="projeler/app.exe" download style="color:#00ffc8;">🗣️ Sesli + Yazılı Chat Uygulaması</a></li>
+    <li><a href="https://drive.google.com/uc?export=download&id=1Z63xOMHodHOEKKjxybZCtgF9pqvtGMAG" target="_blank" style="color:#00ffc8;">🎃 Dayz’ın Evi – Korku Oyunu (Google Drive)</a></li>
+  </ul>
+`,
     iletisim: `
       <h2>📞 İletişim</h2>
       <p>📱 WhatsApp: 0555 163 18 50</p>
