--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="google-site-verification" content="nIMaZ9HZNF8yhKK3W24_wkrOgvB1E_SPONgRN5gE14c" />
 <title>HYYazılım</title>
 <style>
   body {
