--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="google-site-verification" content="nIMaZ9HZNF8yhKK3W24_wkrOgvB1E_SPONgRN5gE14c" />
-<title>HYYazılım</title>
+<title>HYYazılım | Hasan Yusuf YILDIZ - Yazılım Projeleri</title>
+<meta name="description" content="HYYazılım, Hasan Yusuf YILDIZ tarafından geliştirilen masaüstü ve mobil yazılım projeleri sunar." />
 <style>
   body {
     background: linear-gradient(135deg, #0d324d, #7f5a83);
